# Bootcamp-Python

./: README.md  liens
D00/: modif_sujet.txt
D00/ex00/: answers.txt  requirements.txt
D00/ex01/: exec.py
D00/ex02/: whois.py
D00/ex03/: count.py  test.txt
D00/ex04/: operations.py
D00/ex05/: kata00.py  kata01.py  kata02.py  kata03.py  kata04.py
D00/ex06/: recipe.py
D00/ex07/: filterwords.py
D00/ex08/: sos.py
D00/ex09/: guess.py
D01/: Autres_infos_corrections.txt  Python Bootcamp - Correction 01.html  modif_sujet.txt
D01/ex00/: book.py  recipe.py  test.py
D01/ex01/: game.py
D01/ex02/: test.py  vector.py
D01/ex03/: generator.py
D01/ex04/: eval.py
D01/ex05/: banking_test1.py  banking_test2.py  test1.py  test2.py  the_bank.py
D02/: modif_sujet.txt
D02/ex00/: ft_filter.py  ft_map.py  ft_reduce.py  test.py
D02/ex01/: main.py
D02/ex02/: logger.py
D02/ex03/: csvreader.py  main_bad.py  main_good.py  other.csv
D02/ex04/: LICENSE.md  README.md  build.sh  pyproject.toml  setup.cfg
D02/ex04/my_minipack/: logger.py  progressbar.py
D02/ex05/: TinyStatistician.py
D03/: correction  modif_sujet.txt
D03/ex00/: NumPyCreator.py  test.py
D03/ex01/: ImageProcessor.py  test.py
D03/ex02/: ScrapBooker.py  test.py
D03/ex03/: ColorFilter.py  ImageProcessor.py  test.py
D03/ex04/: Kmeans.py  Kmeans_auto.py  Kmeans_steps.txt  csvreader.py  not_working.csv  short.csv
D04/: correction  modif
D04/ex00/: FileLoader.py  test.py
D04/ex01/: FileLoader.py  YoungestFellah.py  test.py
D04/ex02/: ProportionBySport.py  test.py
D04/ex03/: test.py  (+1 more)
(+10 files in other folders)
