[metadata]
name = my-minipack
version = 1.0.0
summary = Howto create a package in python.
home-page = None
author = anadege
author-email = anadege@student.42.fr
license = GPLv3
location = [PATH TO BOOTCAMP PYTHON]/module02/tmp_env/lib/python3.7/site-packages
requires =
required-by =
metadata-version = 2.1
installer = pip
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Students
    Topic :: Education
    Topic :: HowTo
    Topic :: Package
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
package_dir =
    = my_minipack
packages = find:
python_requires = >=3.6

[options.packages.find]
where = my_minipack
